# cv-course3

./: README.md  add-noise.ipynb  edge-detection.ipynb  pyproject.toml
